--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,6 +1,46 @@
 {
+
+  "myProfile": "Profile",
+  "notification": "Notifications",
+  "myMessage": "My Massages",
+  "calender": "Calender",
+  "setting": "settings",
   "changeLanguage": "Change Language",
+  "language": "language",
   "arabic": "Arabic",
   "english": "English",
-  "logIn": "Log In"
+  "themes": "Themes",
+  "light": "Light mode",
+  "dark": "Dark mode",
+  "info": "Info",
+  "privacyPolicy": "Privacy Policy",
+  "getHelp": "Get Help",
+  "aboutUs": "About us",
+  "logOut": "Logout",
+  "search": "Search",
+  "topBorrowBooks": "Top Borrow Books",
+  "recentlyReturned": "Recently Returnedً",
+  "htiMaterial": "HTI Material",
+  "graduationProjects": "Graduation Projects",
+  "available": "Available",
+  "unavailable": "Unavailable",
+  "borrow": "Borrow",
+  "read": "Read",
+  "overview": "Overview",
+  "moreEditionOfThisBook": "More editions of this book",
+  "moreBooksFromThisCategory": "More Books of this Category",
+  "moreBooksFromThisAuthor": "More Books from this author",
+  "doYouWantToLogout": "Do you want to logout?",
+  "bookName": "Book Name",
+  "author": "Author",
+  "pagesNum": "Pages Num",
+
+  "yes": "Yes",
+  "no": "No",
+  "loginToLibrary": "Login to Library",
+  "password": "Password",
+  "id": "ID",
+
+
+  "logIn": "Login"
 }
