--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -2,7 +2,9 @@
 
   "myProfile": "Profile",
   "notification": "Notifications",
+  "notificationNo": "You don't have any notification",
   "myMessage": "My Massages",
+  "myMessageNo": "You don't have any message",
   "calender": "Calender",
   "setting": "settings",
   "changeLanguage": "Change Language",
@@ -34,12 +36,18 @@
   "bookName": "Book Name",
   "author": "Author",
   "pagesNum": "Pages Num",
+  "edition": "Edition",
 
   "yes": "Yes",
   "no": "No",
   "loginToLibrary": "Login to Library",
   "password": "Password",
   "id": "ID",
+
+  "home": "Home",
+  "categories": "Categories",
+  "saved": "Saved",
+  "account": "Account",
 
 
   "logIn": "Login"
