--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,7 +6,7 @@
   "myMessage": "My Massages",
   "myMessageNo": "You don't have any message",
   "calender": "Calender",
-  "setting": "settings",
+  "setting": "Settings",
   "changeLanguage": "Change Language",
   "language": "language",
   "arabic": "Arabic",
