--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -12,7 +12,9 @@
   "arabic": "Arabic",
   "english": "English",
   "themes": "Themes",
+  "changeLib": "change library",
   "light": "Light mode",
+  "detailsBook": "share information about the book",
   "dark": "Dark mode",
   "info": "Info",
   "privacyPolicy": "Privacy Policy",
