--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -14,7 +14,7 @@
   "light": "الوضع الفاتح",
   "dark": "الوضع الداكن",
   "info": "المزيد من المعلومات",
-  "privacyPolicy": "سياسة الخصوصية",
+  "borrowingPolicy": "سياسة الاستعاره",
   "getHelp": "مركز المساعدة",
   "aboutUs": "نبذة عنا",
   "logOut": "تسجيل الخروج",
