--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -17,7 +17,7 @@
   "detailsBook": "share information about the book",
   "dark": "Dark mode",
   "info": "Info",
-  "privacyPolicy": "Privacy Policy",
+  "borrowingPolicy": "borrowing Policy",
   "getHelp": "Get Help",
   "aboutUs": "About us",
   "logOut": "Logout",
