Ehab Start Pagination

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -23,7 +23,7 @@
   "logOut": "Logout",
   "search": "Search",
   "topBorrowBooks": "Top Borrow Books",
-  "recentlyReturned": "Recently Returnedً",
+  "recentlyReturned": "Recently Returned",
   "htiMaterial": "HTI Material",
   "graduationProjects": "Graduation Projects",
   "available": "Available",
