--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -8,16 +8,16 @@
   "calender": "Calender",
   "setting": "Settings",
   "changeLanguage": "Change Language",
-  "language": "language",
+  "language": "Language",
   "arabic": "Arabic",
   "english": "English",
   "themes": "Themes",
-  "changeLib": "change library",
+  "changeLib": "Change Library",
   "light": "Light mode",
   "detailsBook": "share information about the book",
   "dark": "Dark mode",
   "info": "Info",
-  "borrowingPolicy": "borrowing Policy",
+  "borrowingPolicy": "Borrowing Policy",
   "getHelp": "Get Help",
   "aboutUs": "About us",
   "logOut": "Logout",
@@ -50,6 +50,36 @@
   "categories": "Categories",
   "saved": "Saved",
   "account": "Account",
+
+
+  "email": "Email",
+  "name": "Name",
+  "phoneNum": "Phone Num.",
+  "fingerPrint": "Turn on FingerPrint",
+  "clearAll": "Clear All",
+  "typeMessage": "Type a message",
+  "beforeYou": "Before You ",
+  "borrowBold": "BORROW",
+  "youSK": "you should know...",
+  "policyLine1": "1-The maximum number of books available for borrowing is 3 books.",
+  "policyLine2": "2-The borrowing period is 3 working days for the Institute.",
+  "policyLine3": "3-The borrowing period can be extended, but before the date of delivery.",
+  "policyLine4": "4-The borrowing period can only be extended to 2 times.",
+  "policyLine5": "5-If the book is not returned on the delivery date, an email will be sent to The Library Department.",
+  "policyLine6": "6-You must have Your ID when receiving or delivering a book.",
+  "getHelpQ1": "How you can login?",
+  "getHelpA1": "If you want to read or borrow a book, you have to login by entering your email and password in the Login Page",
+  "getHelpQ2": "How you can borrow a book?",
+  "getHelpA2": "We implemented our system in a simple way that did not require any steps from you to borrow books. If you wish to borrow a book just click the 'BORROW' button",
+  "aboutUsL1": "The Library Management System is a project that aims to develop a computerized system to maintain all the daily business of the library.",
+  "aboutUsL2": "This project contains many features that are not generally available in normal library management systems such as user login facilities and teacher login capability, it also has an administrative login feature through which the administrator can complete the book borrowing and retrieval process.",
+  "aboutUsL3": "It also has a facility where the student after logging into their account can see the list of books issued, date of issue and date of return.",
+  "aboutUsL4": "Our project is developed to help students as well as library staff in maintaining the library in the best possible way as well as reducing human effort.",
+  "selectLibrary": "Select Library",
+  "myBorrowedBooks": "My Borrowed Books",
+  "details": "Details",
+  "choose": "Choose ",
+
 
 
   "logIn": "Login"
