--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -47,6 +47,42 @@
   "categories": "الأقسام",
   "saved": "المحفوظات",
   "account": "حسابي",
+
+
+
+  "email": "الإيميل",
+  "name": "الإسم",
+  "phoneNum": "رقم الهاتف",
+  "fingerPrint": "تشغيل بصمة الاصبع",
+  "clearAll": "حذف جميع الإشعارات",
+  "typeMessage": "أكتب رسالة",
+  "beforeYou": "قبل أن",
+  "borrowBold": " تستعير",
+  "youSK": "يجب أن تعلم ...",
+  "policyLine1": "١- أقصي عدد للكتب المًستعارة هو ٣ كتب.",
+  "policyLine2": "٢- مدة الاستعارة هي ٣ أيام عمل للمعهد.",
+  "policyLine3": "٣- مدة الإستعارة يمكن أن تمًد و لكن قبل موعد التسليم",
+  "policyLine4": "٤- مدة الإستعارة يمكن ان تمًد لمرتين فقط.",
+  "policyLine5": "٥- إذا لم يعٌاد الكتاب في موعد التسليم سيتم إرسال إيميل إلي إدراة المكتبه.",
+  "policyLine6": "٦- يجب أن يكون لديك ال ID عند إستلام او تسليم الكتاب.",
+  "getHelpQ1": "كيفية تسجيل الدخول؟",
+  "getHelpA1": "إذا أردت أن تستعير كتابا يحب أن تسجيل الدخول أولا عن طريق ادخل الايميل و كلمة المرور في صفحة التسجيل. ",
+  "getHelpQ2": "كيفية إستعارة كتاب؟",
+  "getHelpA2": "لقد بنينا تطبيقنا بطريقة سهلة لا تحتاج اي خطوات أضافية منك. إذا أردت أن تستعير كتبا فقط اضغط علي زر 'إستعر'",
+  "aboutUsL1": "نظام إدارة المكتبة هو مشروع يهدف إلي تطوير نظام حوسبي لإدارة مهام المكتبة اليومية.",
+  "aboutUsL2": "نظامنا يحتوي علي الكثير من المميزات التي لا توجد في أنظمة إدارة المكتبات العادية سهولة تسجيل الدخول للطلاب و العاملين بالمعهد. أيضا يوجد تسجيل دخول للأدمن و الذي من خلاله يستطيع الأدمن أن يقبل أو يرفض طلبات الإستعارة.",
+  "aboutUsL3": "و يوجد أيضا قائمة لمعرفه الكتب المًستعارة و تايخ الإعادة.",
+  "aboutUsL4": "تم تطوير تطبيقنا لمساعدة إدارة المكتبة علي إدراة المكتبة و الإعتناء بها بأفضل طريقة و تقليل الجهد المبذول.",
+  "selectLibrary": "إختار مكتبة",
+  "myBorrowedBooks": "كًتبي المًستعارة",
+  "details": "التفاصيل",
+  "choose": "إختار",
+
+
+
+
+
+
   "logIn": "تسجيل الدخول",
   "changeLib": "تغيير المكتبة"
 }
