--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -77,6 +77,7 @@
   "myBorrowedBooks": "كًتبي المًستعارة",
   "details": "التفاصيل",
   "choose": "إختار",
+  "loginError": "أدخل أيميل و باسورد صالحين",
 
 
 
