--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -79,6 +79,7 @@
   "myBorrowedBooks": "My Borrowed Books",
   "details": "Details",
   "choose": "Choose ",
+  "loginError": "Enter a valid Email and Password ",
 
 
 
