--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -68,9 +68,11 @@
   "policyLine5": "5-If the book is not returned on the delivery date, an email will be sent to The Library Department.",
   "policyLine6": "6-You must have Your ID when receiving or delivering a book.",
   "getHelpQ1": "How you can login?",
-  "getHelpA1": "If you want to read or borrow a book, you have to login by entering your email and password in the Login Page",
+  "getHelpA1": "If you want to read or borrow a book, you have to login by entering your email and password in the Login Page.",
   "getHelpQ2": "How you can borrow a book?",
-  "getHelpA2": "We implemented our system in a simple way that did not require any steps from you to borrow books. If you wish to borrow a book just click the 'BORROW' button",
+  "getHelpA2": "We implemented our system in a simple way that did not require any steps from you to borrow books. If you wish to borrow a book just click the ",
+  "getHelpA3": "BORROW ",
+  "getHelpA4": "button.",
   "aboutUsL1": "The Library Management System is a project that aims to develop a computerized system to maintain all the daily business of the library.",
   "aboutUsL2": "This project contains many features that are not generally available in normal library management systems such as user login facilities and teacher login capability, it also has an administrative login feature through which the administrator can complete the book borrowing and retrieval process.",
   "aboutUsL3": "It also has a facility where the student after logging into their account can see the list of books issued, date of issue and date of return.",
@@ -80,6 +82,7 @@
   "details": "Details",
   "choose": "Choose ",
   "loginError": "Enter a valid Email and Password ",
+  "noSaved": "There is no saved Books",
 
 
 
