--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -54,7 +54,7 @@
   "name": "الإسم",
   "phoneNum": "رقم الهاتف",
   "fingerPrint": "تشغيل بصمة الاصبع",
-  "clearAll": "حذف جميع الإشعارات",
+  "clearAll": "حذف الجميع",
   "typeMessage": "أكتب رسالة",
   "beforeYou": "قبل أن",
   "borrowBold": " تستعير",
@@ -66,24 +66,21 @@
   "policyLine5": "٥- إذا لم يعٌاد الكتاب في موعد التسليم سيتم إرسال إيميل إلي إدراة المكتبه.",
   "policyLine6": "٦- يجب أن يكون لديك ال ID عند إستلام او تسليم الكتاب.",
   "getHelpQ1": "كيفية تسجيل الدخول؟",
-  "getHelpA1": "إذا أردت أن تستعير كتابا يحب أن تسجيل الدخول أولا عن طريق ادخل الايميل و كلمة المرور في صفحة التسجيل. ",
+  "getHelpA1": "إذا أردت أن تستعير كتابا يحب أن تسجل الدخول أولا عن طريق ادخال الايميل و كلمة المرور في صفحة التسجيل. ",
   "getHelpQ2": "كيفية إستعارة كتاب؟",
-  "getHelpA2": "لقد بنينا تطبيقنا بطريقة سهلة لا تحتاج اي خطوات أضافية منك. إذا أردت أن تستعير كتبا فقط اضغط علي زر 'إستعر'",
+  "getHelpA2": "لقد بنينا تطبيقنا بطريقة سهلة لا تحتاج اي خطوات أضافية منك. إذا أردت أن تستعير كتبا فقط اضغط علي ",
+  "getHelpA3": "إستعر",
+  "getHelpA4": "زر.",
   "aboutUsL1": "نظام إدارة المكتبة هو مشروع يهدف إلي تطوير نظام حوسبي لإدارة مهام المكتبة اليومية.",
-  "aboutUsL2": "نظامنا يحتوي علي الكثير من المميزات التي لا توجد في أنظمة إدارة المكتبات العادية سهولة تسجيل الدخول للطلاب و العاملين بالمعهد. أيضا يوجد تسجيل دخول للأدمن و الذي من خلاله يستطيع الأدمن أن يقبل أو يرفض طلبات الإستعارة.",
-  "aboutUsL3": "و يوجد أيضا قائمة لمعرفه الكتب المًستعارة و تايخ الإعادة.",
+  "aboutUsL2": "نظامنا يحتوي علي الكثير من المميزات التي لا توجد في أنظمة إدارة المكتبات العادية و منها سهولة تسجيل الدخول للطلاب و العاملين بالمعهد. أيضا يوجد تسجيل دخول للأدمن و الذي من خلاله يستطيع الأدمن أن يقبل أو يرفض طلبات الإستعارة.",
+  "aboutUsL3": "و يوجد أيضا قائمة لمعرفه الكتب المًستعارة و تاريخ الإعادة.",
   "aboutUsL4": "تم تطوير تطبيقنا لمساعدة إدارة المكتبة علي إدراة المكتبة و الإعتناء بها بأفضل طريقة و تقليل الجهد المبذول.",
   "selectLibrary": "إختار مكتبة",
-  "myBorrowedBooks": "كًتبي المًستعارة",
+  "myBorrowedBooks": "كتبي المًستعارة",
   "details": "التفاصيل",
   "choose": "إختار",
   "loginError": "أدخل أيميل و باسورد صالحين",
-
-
-
-
-
-
+  "noSaved": "لا توجد كتب محفوظة",
   "logIn": "تسجيل الدخول",
   "changeLib": "تغيير المكتبة"
 }
