This is the last change

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -70,7 +70,6 @@
   "getHelpQ2": "كيفية إستعارة كتاب؟",
   "getHelpA2": "لقد بنينا تطبيقنا بطريقة سهلة لا تحتاج اي خطوات أضافية منك. إذا أردت أن تستعير كتبا فقط اضغط علي ",
   "getHelpA3": "إستعر",
-  "getHelpA4": "زر.",
   "aboutUsL1": "نظام إدارة المكتبة هو مشروع يهدف إلي تطوير نظام حوسبي لإدارة مهام المكتبة اليومية.",
   "aboutUsL2": "نظامنا يحتوي علي الكثير من المميزات التي لا توجد في أنظمة إدارة المكتبات العادية و منها سهولة تسجيل الدخول للطلاب و العاملين بالمعهد. أيضا يوجد تسجيل دخول للأدمن و الذي من خلاله يستطيع الأدمن أن يقبل أو يرفض طلبات الإستعارة.",
   "aboutUsL3": "و يوجد أيضا قائمة لمعرفه الكتب المًستعارة و تاريخ الإعادة.",
@@ -82,5 +81,7 @@
   "loginError": "أدخل أيميل و باسورد صالحين",
   "noSaved": "لا توجد كتب محفوظة",
   "logIn": "تسجيل الدخول",
-  "changeLib": "تغيير المكتبة"
+  "changeLib": "تغيير المكتبة",
+  "loginFirst": "سجل الدخول",
+  "borrowedBooksClear": "لا يوجد لديك أي كتب مُستعارة"
 }
